# TestCmake2

./: CMakeLists.txt  README.md  main.cpp
sub_project1/: CMakeLists.txt  sub_project1.cpp  sub_project1.h
sub_project2/: CMakeLists.txt  sub_project2.cpp  sub_project2.h
